--- a/css/orf-fold-website.css
+++ b/css/orf-fold-website.css
@@ -14,17 +14,17 @@ body {
     width: 290px;
     height: 100%;
     /*display: table;*/
-    font-family: Consolas, sans-serif;
+    font-family: Consolas, monospace, monospace;
     overflow: auto;
 }
 
 #graph {
-    font-family: Consolas, sans-serif;
+    font-family: Consolas, monospace, monospace;
     font-size: 16px;
 }
 
 .updateButton{
-    font-family: Consolas, sans-serif;
+    font-family: Consolas, monospace, monospace;
     padding: 15px 20px 15px 20px;
     background-color: #3a3d45;
     color: #ddd;
@@ -43,7 +43,7 @@ body {
 }
 
 .inputText, .select  {
-    font-family: Consolas, sans-serif;
+    font-family: Consolas, monospace, monospace;
     font-size: 14px;
     padding: 8px;
     border: none;
