--- a/css/structure.css
+++ b/css/structure.css
@@ -13,7 +13,7 @@
     height: 400px;
     margin-left: 10%;
     margin-top: 100px;
-    margin-bottom: 300px;
+    margin-bottom: 100px;
     position: relative;
 }
 
@@ -95,8 +95,19 @@ body {
     }
 }
 
-
 .download-button:hover {
     cursor: pointer;
     text-decoration: underline;
+}
+
+.evodesign-logo {
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 1000;
+}
+
+.evodesign-logo img {
+    width: 50px;
+    height: auto;
 }
